FPVTL-2249 fixed the fl401 withempty kid table on header for Rob, also incorp code review suggestions